--- a/package.json
+++ b/package.json
@@ -8,33 +8,36 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=24"
+  },
   "dependencies": {
     "@emotion/cache": "^11.10.7",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.16",
     "@mui/styled-engine-sc": "^5.11.11",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
+    "@types/node": "latest",
+    "@types/react": "latest",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "@types/react-dom": "18.0.11",
+    "@types/react-dom": "latest",
     "@vercel/speed-insights": "^1.0.1",
-    "eslint-config-next": "13.2.4",
-    "next": "13.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "eslint": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "eslint": "latest",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-config-standard-with-typescript": "latest",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "react-beautiful-dnd": "^13.1.1",
-    "typescript": "^5.0.3"
+    "typescript": "latest"
   }
 }
