--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "engines": {
-    "node": ">=24"
+    "node": ">=20"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.7",
@@ -18,26 +18,27 @@
     "@mui/material": "^5.11.16",
     "@mui/styled-engine-sc": "^5.11.11",
     "@types/node": "latest",
-    "@types/react": "latest",
+    "@types/react": "^18.2.0",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "@types/react-dom": "latest",
+    "@types/react-dom": "^18.2.0",
     "@vercel/speed-insights": "^1.0.1",
     "eslint-config-next": "latest",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "latest",
-    "eslint": "latest",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "latest",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "react-beautiful-dnd": "^13.1.1",
     "typescript": "latest"
   }
 }
